2003-04-16  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* dialog-solver.c (solver_add_scenario): Wrote.
	(cb_dialog_solve_clicked, dialog_init): Added the handling of add
	scenario buttons and entry.

	* solver.glade: Added buttons and an entry for a scenario output.
	
	* tool-dialogs.h: Renamed scenario_buttons_t to scenario_state_t
	and added/moved scenario fields there.

	* dialog-scenarios.c (scenarios_cancel_clicked_cb): New cb to
	cancel changes made.
	(scenario_manager_free): Added to free memory allocations.

2003-04-15  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* dialog-scenarios.c (scenario_add_ok_clicked_cb): Issue a warning
	if some of the changing cells contain a formula.

	* dialog-solver.c (cb_dialog_solve_clicked): Check that at least
	one constraint is defined.

2003-04-14  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* dialog-scenarios.c (set_selection_state, dialog_scenarios): Fix
	the summary button sensitivity.
	(scenarios_summary_clicked_cb): New API for scenario_summary.
	
2003-04-14  Morten Welinder  <terra@gnome.org>

	* dialog-scenarios.c (check_name): Make UTF-8 safe.
	(find_scenario_strs): Fix memory corruption.
	(scenario_name_used): Constify.

2003-04-12  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* dao-gui-utils.c (dialog_tool_init_outputs): Added NULL check for
	scenario dialogs.

2003-04-11  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* dialog-scenarios.c (dialog_scenario_add): Added a default
	comment.
	(scenario_add_ok_clicked_cb): Added a check that the changing
	cells are on the same sheet. Kill memory leaks.

2003-04-10  Abel Cheung  <maddog@linux.org.hk>

	* dialog-scenarios.c: Unmark empty strings from being translated.
	It would translate into the whole .po file header.

2003-04-10  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* dialog-scenarios.c: Introduced.
	dialogs.h, tool-dialogs.h: Related changes.
	
2003-04-09  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>

	* dialog-analysis-tools.c (tool_load_selection): Added != NULL