@@ -1,3 +1,9 @@
+2003-04-18  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>
+
+	* scenarios.c (*): Replaced the loops that go through the values
+	by a callback function. Store values before showing a scenario and
+	restore them if cancelled.
+
 2003-04-16  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>
 
 	* scenarios.c (scenario_new): Make the name to be unique if it
