@@ -1,3 +1,7 @@
+2003-04-18  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>
+
+	* scenario-manager.glade: Added Result cells entry.
+
 2003-04-16  Jukka Pekka  <jiivonen@hutcs.cs.hut.fi>
 
 	* dialog-solver.c (solver_add_scenario): Wrote.
